# FFmpegpp

./: .gitignore  CMakeLists.txt  readme.md
cmake_modules/: FindFFmpeg.cmake
examples/: hardware_decode.cpp  hardware_decode_context.cpp  how_to_create_custom_object.cpp  readme.md  rescale_video_packets.cpp  simple_read.cpp  simple_read_write.cpp  transcoding_audio.cpp  video_frame_scale.cpp
src/: codec_context.h  decoder_context.h  encoder_context.h  ffmpegpp.h  format_context.h  frame.h  input_format_context.h  object.h  object_base.h  output_format_context.h  packet.h  stream.h  sws_scaler.h  wrapper.h  wrapper_base.h
src/allocators/: allocators.h  allocators_pack.h  avaudio_fifo.cpp  avaudio_fifo.h  avaudio_fifo_allocator.cpp  avaudio_fifo_allocator.h  avcodec_context.cpp  avcodec_context.h  avcodec_context_allocator.cpp  avcodec_context_allocator.h  avcodec_parameters.cpp  avcodec_parameters.h  avcodec_parameters_allocator.cpp  avcodec_parameters_allocator.h  avframe.cpp  avframe.h  avframe_allocator.cpp  avframe_allocator.h  avpacket.cpp  avpacket.h  avpacket_allocator.cpp  avpacket_allocator.h  avstream_allocator.cpp  avstream_allocator.h  default.h  default_allocator.h  input_format_allocator.cpp  input_format_allocator.h  input_format_context.cpp  input_format_context.h  input_format_context_allocator.cpp  input_format_context_allocator.h  output_format_allocator.cpp  output_format_allocator.h  output_format_context.cpp  output_format_context.h  output_format_context_allocator.cpp  swr_context.cpp  (+8 more)
tests/: readme.md
tools/: ffmpeg.bat  ffmpeg.sh
(+98 files in other folders)
